// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brand should render correctly with link not provided 1`] = `
.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c1 {
  box-sizing: content-box;
  fill: #FFFFFF;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c3:hover .c1,
.c3:focus .c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c1 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    focusable="false"
    height={24}
    viewBox="0 0 167.95 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fillrule="evenodd"
    >
      <path
        d="M84.32"
      />
    </g>
  </svg>
  <span
    className="c2"
  >
    <span
      lang="en-GB"
    >
      Default Brand Name
    </span>
    Service
  </span>
</div>
`;

exports[`Brand should render correctly with link provided 1`] = `
.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c2 {
  display: inline-block;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c3 {
  box-sizing: content-box;
  fill: #FFFFFF;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c1:hover .c3,
.c1:focus .c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c3 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <a
    className="c1 c2"
    href="https://www.bbc.co.uk/news"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={24}
      viewBox="0 0 167.95 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillrule="evenodd"
      >
        <path
          d="M84.32"
        />
      </g>
    </svg>
    <span
      className="c4"
    >
      <span
        lang="en-GB"
      >
        Default Brand Name
      </span>
      Service
    </span>
  </a>
</div>
`;

exports[`Brand should render correctly with no service Localized Name 1`] = `
.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

.c1 {
  box-sizing: content-box;
  fill: #FFFFFF;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
}

.c3:hover .c1,
.c3:focus .c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c1 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    focusable="false"
    height={24}
    viewBox="0 0 167.95 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fillrule="evenodd"
    >
      <path
        d="M84.32"
      />
    </g>
  </svg>
  <span
    className="c2"
  >
    BBC News
  </span>
</div>
`;
